--- a/index.jade
+++ b/index.jade
@@ -4,6 +4,7 @@ html
      title Project
      meta(charset='utf-8')
      meta(name="viewport", content="width=device-width, initial-scale=1")
+     link(rel="stylesheet", type="text/css", media="screen", href="https://necolas.github.io/normalize.css/latest/normalize.css")
      link(rel="stylesheet", type="text/css", media="screen", href="http://openfontlibrary.org/face/glacial-indifference")
      link(rel="stylesheet", type="text/css", href="style.css")
      script(src="script.js")
