--- a/jade/index.jade
+++ b/jade/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
      meta(name="viewport", content="width=device-width, initial-scale=1")
      link(rel="stylesheet", type="text/css", href="https://necolas.github.io/normalize.css/latest/normalize.css")
      link(rel="stylesheet", type="text/css", href="http://openfontlibrary.org/face/glacial-indifference")
-     link(rel="stylesheet", type="text/css", href="style.css")
-     script(type="text/javascript", src="script.js")
+     link(rel="stylesheet", type="text/css", href="css/main.css")
+     script(type="text/javascript", src="js/main.js")
   body
     h1 project
