--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,7 +5,7 @@ html(lang="en")
      meta(charset='utf-8')
      meta(name="viewport", content="width=device-width, initial-scale=1")
      link(rel="stylesheet", type="text/css", href="https://necolas.github.io/normalize.css/latest/normalize.css")
-     link(rel="stylesheet", type="text/css", href="http://openfontlibrary.org/face/glacial-indifference")
+     link(rel="stylesheet", type="text/css", href="https://fontlibrary.org/face/glacial-indifference")
      link(rel="stylesheet", type="text/css", href="css/main.css")
      script(type="text/javascript", src="js/main.js")
   body
