--- a/jade/index.jade
+++ b/jade/index.jade
@@ -7,6 +7,6 @@ html(lang="en")
      link(rel="stylesheet", type="text/css", href="https://necolas.github.io/normalize.css/latest/normalize.css")
      link(rel="stylesheet", type="text/css", href="https://fontlibrary.org/face/glacial-indifference")
      link(rel="stylesheet", type="text/css", href="css/main.css")
-     script(type="text/javascript", src="js/main.js")
+     script(type="text/javascript", src="js/app.js")
   body
-    h1 project
+    main#reactTarget
